--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
       "@service/*": ["src/shared/services/*"],
       "@socket/*": ["src/shared/sockets/*"],
       "@worker/*": ["src/shared/workers/*"],
-      "@root/*": ["src/*"]
-    }
-  }
+      "@root/*": ["src/*"],
+    },
+  },
 }
