--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.2",
-    "bullmq": "^5.1.5",
+    "bullmq": "^5.1.8",
     "bunyan": "^1.8.15",
     "canvas": "^2.11.2",
-    "cloudinary": "^1.41.3",
+    "cloudinary": "^2.0.0",
     "compression": "^1.7.4",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
@@ -39,12 +39,13 @@
     "hpp": "^0.2.3",
     "http-status-codes": "^2.3.0",
     "ip": "^1.1.8",
-    "joi": "^17.12.0",
+    "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
-    "nodemailer": "^6.9.8",
+    "nodemailer": "^6.9.9",
     "redis": "^4.6.12",
     "socket.io": "^4.7.4",
     "swagger-stats": "^0.99.7",
@@ -62,19 +63,19 @@
     "@types/express": "^4.17.21",
     "@types/hpp": "^0.2.5",
     "@types/ip": "^1.1.3",
-    "@types/jest": "^29.5.11",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
     "@types/nodemailer": "^6.4.14",
     "@types/redis-info": "^3.0.3",
     "@types/swagger-stats": "^0.95.11",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.8",
