feat: added user signup feature

--- a/.env.sample
+++ b/.env.sample
@@ -10,9 +10,9 @@ SECRET_KEY_TWO="@1a2b3c*#"
 # REDIS
 REDIS_HOST="redis://localhost:6379"
 # CLOUDINARY
-CLOUD_NAME=
-CLOUD_API_KEY=
-CLOUD_API_SECRET=
+CLOUD_NAME=""
+CLOUD_API_KEY=""
+CLOUD_API_SECRET=""
 # SENDGRID
 SENDER_EMAIL=""
 SENDER_EMAIL_PASSWORD=""
