--- a/package.json
+++ b/package.json
@@ -16,22 +16,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bull-board/api": "^5.14.0",
     "@bull-board/express": "^5.14.0",
-    "@faker-js/faker": "^8.4.0",
+    "@faker-js/faker": "^8.4.1",
     "@jest/types": "^29.6.3",
     "@sendgrid/mail": "^8.1.0",
     "@socket.io/redis-adapter": "^8.2.1",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.2",
-    "bullmq": "^5.1.8",
+    "bullmq": "^5.1.10",
     "bunyan": "^1.8.15",
     "canvas": "^2.11.2",
-    "cloudinary": "^2.0.0",
+    "cloudinary": "^2.0.1",
     "compression": "^1.7.4",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.4.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -44,9 +45,9 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.1",
+    "mongoose": "^8.1.2",
     "nodemailer": "^6.9.9",
-    "redis": "^4.6.12",
+    "redis": "^4.6.13",
     "socket.io": "^4.7.4",
     "swagger-stats": "^0.99.7",
     "typescript": "^5.3.3",
@@ -61,7 +62,7 @@
     "@types/cors": "^2.8.17",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
-    "@types/hpp": "^0.2.5",
+    "@types/hpp": "^0.2.6",
     "@types/ip": "^1.1.3",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
@@ -69,8 +70,8 @@
     "@types/nodemailer": "^6.4.14",
     "@types/redis-info": "^3.0.3",
     "@types/swagger-stats": "^0.95.11",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
